--- a/templates/register.html
+++ b/templates/register.html
@@ -32,6 +32,8 @@
     class="template-customizer-theme-css" />
   <link rel="stylesheet" href="{{url_for('static', filename='assets/css/demo.css')}}" />
 
+  <link rel="stylesheet" href="{{url_for('static', filename='assets/css/sweetalert2.css')}}" />
+
   <!-- Vendors CSS -->
   <link rel="stylesheet"
     href="{{url_for('static', filename='assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css')}}" />
@@ -179,6 +181,7 @@
   <!-- Core JS -->
   <!-- build:js assets/vendor/js/core.js -->
   <script src="{{url_for('static', filename='assets/js/jquery.min.js')}}"></script>  
+  <script src="{{url_for('static', filename='assets/js/extended-ui-sweetalert2.js')}}"></script> 
   <script src="{{url_for('static', filename='assets/jquery/register.js')}}"></script>  
   <script src="{{url_for('static', filename='assets/vendor/libs/jquery/jquery.js')}}"></script>
   <script src="{{url_for('static', filename='assets/vendor/libs/popper/popper.js')}}"></script>
