new function added
Have:
reset password
waitMeAdded / swal2
deactivate account
html format in email
profile page

--- a/templates/forgot-password.html
+++ b/templates/forgot-password.html
@@ -37,6 +37,8 @@
     <link rel="stylesheet" href="{{url_for('static', filename='assets/vendor/css/core.css')}}" class="template-customizer-core-css" />
     <link rel="stylesheet" href="{{url_for('static', filename='assets/vendor/css/theme-default.css')}}" class="template-customizer-theme-css" />
     <link rel="stylesheet" href="{{url_for('static', filename='assets/css/demo.css')}}" />
+    <link rel="stylesheet" href="{{url_for('static', filename='assets/waitMe/waitMe.css')}}" />
+    <link rel="stylesheet" href="{{url_for('static', filename='assets/waitMe/waitMe.min.css')}}" />
 
     <!-- Vendors CSS -->
     <link rel="stylesheet" href="{{url_for('static', filename='assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css')}}" />
@@ -44,6 +46,8 @@
     <!-- Page CSS -->
     <!-- Page -->
     <link rel="stylesheet" href="{{url_for('static', filename='assets/vendor/css/pages/page-auth.css')}}" />
+    <link rel="stylesheet" href="{{url_for('static', filename='assets/css/waitMe.min.css')}}"/>
+    <link rel="stylesheet" href="{{url_for('static', filename='assets/css/sweetalert2.css')}}"/>
     <!-- Helpers -->
     <script src="{{url_for('static', filename='assets/vendor/js/helpers.js')}}"></script>
 
@@ -54,7 +58,7 @@
 
   <body>
     <!-- Content -->
-
+<div id='waitMeDiv'>
     <div class="container-xxl">
       <div class="authentication-wrapper authentication-basic container-p-y">
         <div class="authentication-inner py-4">
@@ -125,7 +129,7 @@
               <!-- /Logo -->
               <h4 class="mb-2">Forgot Password? 🔒</h4>
               <p class="mb-4">Enter your email and we'll send you instructions to reset your password</p>
-              <form id="formAuthentication" class="mb-3" action="index.html" method="POST">
+              <div id="formAuthentication" class="mb-3">
                 <div class="mb-3">
                   <label for="email" class="form-label">Email</label>
                   <input
@@ -137,10 +141,10 @@
                     autofocus
                   />
                 </div>
-                <button class="btn btn-primary d-grid w-100">Send Reset Link</button>
-              </form>
+                <button class="btn btn-primary d-grid w-100" id='senddResetLink' type='button'>Send Reset Link</button>
+              </div>
               <div class="text-center">
-                <a href="auth-login-basic.html" class="d-flex align-items-center justify-content-center">
+                <a href="{{url_for('login')}}" class="d-flex align-items-center justify-content-center">
                   <i class="bx bx-chevron-left scaleX-n1-rtl bx-sm"></i>
                   Back to login
                 </a>
@@ -151,24 +155,29 @@
         </div>
       </div>
     </div>
+  </div> 
 
     <!-- / Content -->
 
     <!-- Core JS -->
     <!-- build:js assets/vendor/js/core.js -->
-    <script src="../assets/vendor/libs/jquery/jquery.js"></script>
-    <script src="../assets/vendor/libs/popper/popper.js"></script>
-    <script src="../assets/vendor/js/bootstrap.js"></script>
-    <script src="../assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.js"></script>
+    <script src="{{url_for('static', filename='assets/vendor/libs/jquery/jquery.js')}}"></script>
+    <script src="{{url_for('static', filename='assets/vendor/libs/popper/popper.js')}}"></script>
+    <script src="{{url_for('static', filename='assets/vendor/js/bootstrap.js')}}"></script>
+    <script src="{{url_for('static', filename='assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.js')}}"></script>
 
-    <script src="../assets/vendor/js/menu.js"></script>
+    <script src="{{url_for('static', filename='assets/vendor/js/menu.js')}}"></script>
     <!-- endbuild -->
 
     <!-- Vendors JS -->
 
     <!-- Main JS -->
-    <script src="../assets/js/main.js"></script>
-
+    <script src="{{url_for('static', filename='assets/js/main.js')}}"></script>
+    <script src="{{url_for('static', filename='assets/js/waitMe.min.js')}}"></script>
+    <script src="{{url_for('static', filename='assets/js/sweetalert2.js')}}"></script>
+    <script src="{{url_for('static', filename='assets/jquery/forgot-password.js')}}"></script>
+    <link rel="stylesheet" href="{{url_for('static', filename='assets/waitMe/waitMe.js')}}" />
+    <link rel="stylesheet" href="{{url_for('static', filename='assets/waitMe/waitMe.min.js')}}" />
     <!-- Page JS -->
 
     <!-- Place this tag in your head or just before your close body tag. -->
