--- a/templates/register.html
+++ b/templates/register.html
@@ -151,6 +151,15 @@
                   <span class="input-group-text cursor-pointer"><i class="bx bx-hide"></i></span>
                 </div>
               </div>
+              <div class="mb-3 form-password-toggle">
+                <label class="form-label" for="password">Repeat Password</label>
+                <div class="input-group input-group-merge">
+                  <input type="password" id="repeatPassword" class="form-control" name="password"
+                    placeholder="&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;"
+                    aria-describedby="password" />
+                  <span class="input-group-text cursor-pointer"><i class="bx bx-hide"></i></span>
+                </div>
+              </div>
 
               <div class="mb-3">
                 <div class="form-check">
