--- a/templates/app-access-roles.html
+++ b/templates/app-access-roles.html
@@ -60,11 +60,11 @@
     <link rel="canonical" href="https://themeselection.com/item/sneat-bootstrap-html-admin-template/">
 
     <!-- Google Tag Manager (Default ThemeSelection: GTM-5DDHKGP, PixInvent: GTM-5J3LMKC) -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-      'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-      })(window,document,'script','dataLayer','GTM-5DDHKGP');</script>
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({"gtm.start":
+      new Date().getTime(),event:"gtm.js"});var f=d.getElementsByTagName(s)[0],
+      j=d.createElement(s),dl=l!="dataLayer"?"&l="+l:";j.async=true;j.src=
+      "https://www.googletagmanager.com/gtm.js?id="+i+dl;f.parentNode.insertBefore(j,f);
+      })(window,document,"script","dataLayer","GTM-5DDHKGP");</script>
     <!-- End Google Tag Manager -->
 
     
@@ -77,32 +77,32 @@
     <link href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 
     <!-- Icons -->
-    <link rel="stylesheet" href="{{url_for('static', filename='assets/vendor/fonts/boxicons.css')}}" />
-    <link rel="stylesheet" href="{{url_for('static', filename='assets/vendor/fonts/fontawesome.css')}}" />
-    <link rel="stylesheet" href="{{url_for('static', filename='assets/vendor/fonts/flag-icons.css')}}" />
+    <link rel="stylesheet" href="{{url_for("static", filename="assets/vendor/fonts/boxicons.css")}}" />
+    <link rel="stylesheet" href="{{url_for("static", filename="assets/vendor/fonts/fontawesome.css")}}" />
+    <link rel="stylesheet" href="{{url_for("static", filename="assets/vendor/fonts/flag-icons.css")}}" />
 ``
     <!-- Core CSS -->
-    <link rel="stylesheet" href="{{url_for('static', filename='assets/css/core.css')}}" class="template-customizer-core-css" />
-    <link rel="stylesheet" href="{{url_for('static', filename='assets/css/theme-default.css')}}" class="template-customizer-theme-css" />
-    <link rel="stylesheet" href="{{url_for('static', filename='assets/css/demo.css')}}" />
+    <link rel="stylesheet" href="{{url_for("static", filename="assets/css/core.css")}}" class="template-customizer-core-css" />
+    <link rel="stylesheet" href="{{url_for("static", filename="assets/css/theme-default.css")}}" class="template-customizer-theme-css" />
+    <link rel="stylesheet" href="{{url_for("static", filename="assets/css/demo.css")}}" />
 
     <!-- Vendors CSS -->
-    <link rel="stylesheet" href="{{url_for('static', filename='assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css')}}" />
-    <link rel="stylesheet" href="{{url_for('static', filename='assets/css/typeahead.css')}}" />
-    <link rel="stylesheet" href="{{url_for('static', filename='assets/css/datatables.bootstrap5.css')}}">
-<link rel="stylesheet" href="{{url_for('static', filename='assets/css/responsive.bootstrap5.css')}}">
-<link rel="stylesheet" href="{{url_for('static', filename='assets/css/formValidation.min.css')}}" />
+    <link rel="stylesheet" href="{{url_for("static", filename="assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css")}}" />
+    <link rel="stylesheet" href="{{url_for("static", filename="assets/css/typeahead.css")}}" />
+    <link rel="stylesheet" href="{{url_for("static", filename="assets/css/datatables.bootstrap5.css")}}">
+<link rel="stylesheet" href="{{url_for("static", filename="assets/css/responsive.bootstrap5.css")}}">
+<link rel="stylesheet" href="{{url_for("static", filename="assets/css/formValidation.min.css")}}" />
 
     <!-- Page CSS -->
     
     <!-- Helpers -->
-    <script src="{{url_for('static', filename='assets/vendor/js/helpers.js')}}"></script>
+    <script src="{{url_for("static", filename="assets/vendor/js/helpers.js")}}"></script>
 
     <!--! Template customizer & Theme config files MUST be included after core stylesheets and helpers.js in the <head> section -->
     <!--? Template customizer: To hide customizer set displayCustomizer value false in config.js.  -->
-    <script src="{{url_for('static', filename='assets/vendor/js/template-customizer.js')}}"></script>
+    <script src="{{url_for("static", filename="assets/vendor/js/template-customizer.js")}}"></script>
     <!--? Config:  Mandatory theme config file contain global vars & default theme options, Set your preferred theme option in this file.  -->
-    <script src="{{url_for('static', filename='assets/js/config.js')}}"></script>
+    <script src="{{url_for("static", filename="assets/js/config.js")}}"></script>
 </head>
 
 <body>
@@ -574,7 +574,7 @@
           <!-- Language -->
           <li class="nav-item dropdown-language dropdown me-2 me-xl-0">
             <a class="nav-link dropdown-toggle hide-arrow" href="javascript:void(0);" data-bs-toggle="dropdown">
-              <i class='fi fi-us fis rounded-circle fs-3 me-1'></i>
+              <i class="fi fi-us fis rounded-circle fs-3 me-1"></i>
             </a>
             <ul class="dropdown-menu dropdown-menu-end">
               <li>
@@ -611,7 +611,7 @@
           <!-- Style Switcher -->
           <li class="nav-item me-2 me-xl-0">
             <a class="nav-link style-switcher-toggle hide-arrow" href="javascript:void(0);">
-              <i class='bx bx-sm'></i>
+              <i class="bx bx-sm"></i>
             </a>
           </li>
           <!--/ Style Switcher -->
@@ -619,7 +619,7 @@
           <!-- Quick links  -->
           <li class="nav-item dropdown-shortcuts navbar-dropdown dropdown me-2 me-xl-0">
             <a class="nav-link dropdown-toggle hide-arrow" href="javascript:void(0);" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">
-              <i class='bx bx-grid-alt bx-sm'></i>
+              <i class="bx bx-grid-alt bx-sm"></i>
             </a>
             <div class="dropdown-menu dropdown-menu-end py-0">
               <div class="dropdown-menu-header border-bottom">
@@ -1014,7 +1014,7 @@
             <li data-bs-toggle="tooltip" data-popup="tooltip-custom" data-bs-placement="top" title="Julee Rossignol" class="avatar avatar-sm pull-up">
               <img class="rounded-circle" src="../../assets/img/avatars/6.png" alt="Avatar">
             </li>
-            <li data-bs-toggle="tooltip" data-popup="tooltip-custom" data-bs-placement="top" title="Kaith D'souza" class="avatar avatar-sm pull-up">
+            <li data-bs-toggle="tooltip" data-popup="tooltip-custom" data-bs-placement="top" title="Kaith D"souza" class="avatar avatar-sm pull-up">
               <img class="rounded-circle" src="../../assets/img/avatars/15.png" alt="Avatar">
             </li>
             <li data-bs-toggle="tooltip" data-popup="tooltip-custom" data-bs-placement="top" title="John Doe" class="avatar avatar-sm pull-up">
@@ -1047,7 +1047,7 @@
             <li data-bs-toggle="tooltip" data-popup="tooltip-custom" data-bs-placement="top" title="Kristi Lawker" class="avatar avatar-sm pull-up">
               <img class="rounded-circle" src="../../assets/img/avatars/2.png" alt="Avatar">
             </li>
-            <li data-bs-toggle="tooltip" data-popup="tooltip-custom" data-bs-placement="top" title="Kaith D'souza" class="avatar avatar-sm pull-up">
+            <li data-bs-toggle="tooltip" data-popup="tooltip-custom" data-bs-placement="top" title="Kaith D"souza" class="avatar avatar-sm pull-up">
               <img class="rounded-circle" src="../../assets/img/avatars/15.png" alt="Avatar">
             </li>
             <li data-bs-toggle="tooltip" data-popup="tooltip-custom" data-bs-placement="top" title="Danny Paul" class="avatar avatar-sm pull-up">
@@ -1083,7 +1083,7 @@
             <li data-bs-toggle="tooltip" data-popup="tooltip-custom" data-bs-placement="top" title="Kim Merchent" class="avatar avatar-sm pull-up">
               <img class="rounded-circle" src="../../assets/img/avatars/10.png" alt="Avatar">
             </li>
-            <li data-bs-toggle="tooltip" data-popup="tooltip-custom" data-bs-placement="top" title="Sam D'souza" class="avatar avatar-sm pull-up">
+            <li data-bs-toggle="tooltip" data-popup="tooltip-custom" data-bs-placement="top" title="Sam D"souza" class="avatar avatar-sm pull-up">
               <img class="rounded-circle" src="../../assets/img/avatars/13.png" alt="Avatar">
             </li>
           </ul>
@@ -1113,7 +1113,7 @@
             <li data-bs-toggle="tooltip" data-popup="tooltip-custom" data-bs-placement="top" title="Peter Adward" class="avatar avatar-sm pull-up">
               <img class="rounded-circle" src="../../assets/img/avatars/15.png" alt="Avatar">
             </li>
-            <li data-bs-toggle="tooltip" data-popup="tooltip-custom" data-bs-placement="top" title="Kaith D'souza" class="avatar avatar-sm pull-up">
+            <li data-bs-toggle="tooltip" data-popup="tooltip-custom" data-bs-placement="top" title="Kaith D"souza" class="avatar avatar-sm pull-up">
               <img class="rounded-circle" src="../../assets/img/avatars/10.png" alt="Avatar">
             </li>
             <li data-bs-toggle="tooltip" data-popup="tooltip-custom" data-bs-placement="top" title="John Parker" class="avatar avatar-sm pull-up">
@@ -1140,7 +1140,7 @@
             <li data-bs-toggle="tooltip" data-popup="tooltip-custom" data-bs-placement="top" title="Kim Merchent" class="avatar avatar-sm pull-up">
               <img class="rounded-circle" src="../../assets/img/avatars/10.png" alt="Avatar">
             </li>
-            <li data-bs-toggle="tooltip" data-popup="tooltip-custom" data-bs-placement="top" title="Sam D'souza" class="avatar avatar-sm pull-up">
+            <li data-bs-toggle="tooltip" data-popup="tooltip-custom" data-bs-placement="top" title="Sam D"souza" class="avatar avatar-sm pull-up">
               <img class="rounded-circle" src="../../assets/img/avatars/13.png" alt="Avatar">
             </li>
             <li data-bs-toggle="tooltip" data-popup="tooltip-custom" data-bs-placement="top" title="Nurvi Karlos" class="avatar avatar-sm pull-up">
@@ -1543,31 +1543,31 @@
 
   <!-- Core JS -->
   <!-- build:js assets/vendor/js/core.js -->
-  <script src="{{url_for('static', filename='assets/vendor/libs/jquery/jquery.js')}}"></script>
-  <script src="{{url_for('static', filename='assets/vendor/libs/popper/popper.js')}}"></script>
-  <script src="{{url_for('static', filename='assets/vendor/js/bootstrap.js')}}"></script>
-  <script src="{{url_for('static', filename='assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.js')}}"></script>
+  <script src="{{url_for("static", filename="assets/vendor/libs/jquery/jquery.js")}}"></script>
+  <script src="{{url_for("static", filename="assets/vendor/libs/popper/popper.js")}}"></script>
+  <script src="{{url_for("static", filename="assets/vendor/js/bootstrap.js")}}"></script>
+  <script src="{{url_for("static", filename="assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.js")}}"></script>
   
-  <script src="{{url_for('static', filename='assets/js/hammer.js')}}"></script>
-  <script src="{{url_for('static', filename='assets/js/i18n.js')}}"></script>
-  <script src="{{url_for('static', filename='assets/js/typeahead.js')}}"></script>
+  <script src="{{url_for("static", filename="assets/js/hammer.js")}}"></script>
+  <script src="{{url_for("static", filename="assets/js/i18n.js")}}"></script>
+  <script src="{{url_for("static", filename="assets/js/typeahead.js")}}"></script>
   
-  <script src="{{url_for('static', filename='assets/vendor/js/menu.js')}}"></script>
+  <script src="{{url_for("static", filename="assets/vendor/js/menu.js")}}"></script>
   <!-- endbuild -->
 
   <!-- Vendors JS -->
-  <script src="{{url_for('static', filename='assets/js/datatables-bootstrap5.js')}}"></script>
+  <script src="{{url_for("static", filename="assets/js/datatables-bootstrap5.js")}}"></script>
 
-<script src="{{url_for('static', filename='assets/js/FormValidation.min.js')}}"></script>
-<script src="{{url_for('static', filename='assets/js/Bootstrap5.min.js')}}"></script>
-<script src="{{url_for('static', filename='assets/js/AutoFocus.min.js')}}"></script>
+<script src="{{url_for("static", filename="assets/js/FormValidation.min.js")}}"></script>
+<script src="{{url_for("static", filename="assets/js/Bootstrap5.min.js")}}"></script>
+<script src="{{url_for("static", filename="assets/js/AutoFocus.min.js")}}"></script>
 
   <!-- Main JS -->
-  <script src="{{url_for('static', filename='assets/js/main.js')}}"></script>
+  <script src="{{url_for("static", filename="assets/js/main.js")}}"></script>
 
   <!-- Page JS -->
-  <script src="{{url_for('static', filename='assets/js/app-access-roles.js')}}"></script>
-<script src="{{url_for('static', filename='assets/js/modal-add-role.js')}}"></script>
+  <script src="{{url_for("static", filename="assets/js/app-access-roles.js")}}"></script>
+<script src="{{url_for("static", filename="assets/js/modal-add-role.js")}}"></script>
   
 </body>
 
